# dll-syringe

./: Cargo.toml  README.md  build.rs  cbindgen_c.toml  cbindgen_cpp.toml
bindings/csharp/: Init.cs  NativeMethods.cs  NativeMethods.g.cs  csharp.csproj
src/: c_exports.rs  error.rs  lib.rs  syringe.rs
src/errors/: mod.rs
src/errors/enums/: syringe_create_error.rs
src/errors/structs/: os_error.rs
src/process/: mod.rs  module.rs  process.rs  remote_allocation.rs
src/stubs/: loadlibraryw.rs  loadlibraryw.x64.asm  loadlibraryw.x86.asm
tests/: eject.rs  exports.rs  inject.rs  module.rs  process.rs
tests/common/: mod.rs
tests/helpers/test_payload/: Cargo.toml
tests/helpers/test_payload/src/: lib.rs
