[package]
name = "mini-syringe"
version = "0.1.0"
description = "A windows dll injection library written in rust."
readme = "README.md"
repository = "https://github.com/Reloaded-Project/mini-syringe" 
homepage = "https://github.com/Reloaded-Project/mini-syringe"
documentation = "https://docs.rs/dll-syringe"
license = "MIT"
authors = [ "Sewer56", "[Original Author] OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
resolver = "2"
categories = []
keywords = ["dll-injection", "dll", "injector", "windows"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "libloaderapi", "memoryapi", "wow64apiset"], default-features = false }
cstr = { version = "0.2", default-features = false }
sysinfo = { version = "0.29", default-features = false }
widestring = { version = "1.0", features = ["std", "alloc"], default-features = false }
path-absolutize = { version = "3.1", default-features = false }
stopwatch2 = { version = "2.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
num_enum = { version = "0.6", default-features = false }
shrinkwraprs = { version = "0.3", default-features = false }
same-file = { version = "1.0", default-features = false }
konst = { version = "0.3", default-features = false }
bincode = { version = "1.3", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }
reloaded-memory-buffers = { version = "4.1.0", default-features = false, features = ["std", "external_processes", "no_format", "size_opt"] }

# C# Bindings
[build-dependencies]
csbindgen = "1.9.0"

[target.'cfg(target_arch = "x86")'.dependencies]

[target.'cfg(target_arch = "x86_64")'.dependencies]
goblin = { version = "0.6", optional = true, features = ["std", "pe32"], default-features = false }

[dev-dependencies]
current_platform = { version = "0.2", default-features = false }
tempfile = { version = "3.5", default-features = false }

[features]
default = ["syringe", "into-x86-from-x64"]
into-x86-from-x64 = ["syringe", "goblin"]
process-memory = []
syringe = []
full = ["into-x86-from-x64", "process-memory"]
doc-cfg = ["full"]
c-exports = ["syringe"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
features = ["doc-cfg"]

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"